--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,38 +2,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jkwu.wsforever">
     // 定位
-    <!-- 这个权限用于进行网络定位-->
+    <!-- 这个权限用于进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!-- 这个权限用于访问GPS定位-->
+    <!-- 这个权限用于访问GPS定位 -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位-->
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
-    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
-    <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位-->
+    <!-- 获取运营商信息，用于支持提供运营商信息相关的接口 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
-    <!-- 写入扩展存储，向扩展卡写入数据，用于写入离线定位数据-->
-    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
-    <!-- 访问网络，网络定位需要上网-->
-    <!--<uses-permission android:name="android.permission.INTERNET" />-->
-    <!-- SD卡读取权限，用户写入离线定位数据-->
+    <!-- SD卡读取权限，用户写入离线定位数据 -->
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     // 地图
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     // 获取设备网络状态，禁用后无法获取网络状态
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     //网络权限，当禁用后，无法进行检索等相关业务
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    //读取设备硬件信息，统计数据,<!-- 用于读取手机当前的状态-->
+    //读取设备硬件信息，统计数据,
+    <!-- 用于读取手机当前的状态 -->
     <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     //读取系统信息，包含系统版本等信息，用作统计
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     //允许sd卡写权限，需写入地图数据，禁用后无法显示地图
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     //获取统计数据
     <uses-permission android:name="android.permission.CAMERA" />
     //使用步行AR导航，配置Camera权限
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:name=".WSForeverApplication"
@@ -45,21 +41,47 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="地图定位"
-            >
+            android:label="地图定位">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="SUaXcpyAqbujTTtcx07BO12p1ndj0gHS" />
+        <meta-data
+            android:name="com.baidu.speech.APP_ID"
+            android:value="15077934" />
+        <meta-data
+            android:name="com.baidu.speech.API_KEY"
+            android:value="SUaXcpyAqbujTTtcx07BO12p1ndj0gHS" />
+        <meta-data
+            android:name="com.baidu.speech.SECRET_KEY"
+            android:value="jFUmzjn1HDT6bfBZMZ6G7dBo1G08jz5n" />
+
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
             android:process=":remote" />
+        <service
+            android:name="com.baidu.speech.VoiceRecognitionService"
+            android:exported="false" />
+
+        <activity
+            android:name="com.baidu.voicerecognition.android.ui.BaiduASRDigitalDialog.java"
+            android:configChanges="orientation|keyboardHidden|screenLayout"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Dialog">
+            <intent-filter>
+                <action android:name="com.baidu.action.RECOGNIZE_SPEECH" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
