--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,8 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+MYAPP_RELEASE_STORE_FILE=wsforever.keystore
+MYAPP_RELEASE_KEY_ALIAS=wsforever
+MYAPP_RELEASE_STORE_PASSWORD=suguniang
+MYAPP_RELEASE_KEY_PASSWORD=suguniang
